force-app/main/default/objects/Demographic_Served__c/Demographic_Served__c.object-meta.xml
<CustomObject>
    <label>Demographic Served</label>
    <nameField>
        <displayFormat>DS-{00000}</displayFormat>
        <label>Demographic Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demographics Served</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>