force-app/main/default/objects/Demographic_Served__c/fields/Partner_Organization__c.field-meta.xml
<CustomField>
    <fullName>Partner_Organization__c</fullName>
    <label>Partner Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Demographics Served</relationshipLabel>
    <relationshipName>Demographics_Served</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>