force-app/main/default/objects/Demographic_Served__c/fields/Percent_Served__c.field-meta.xml
<CustomField>
    <fullName>Percent_Served__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Percent Served</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>