force-app/main/default/objects/Demographic_Served__c/fields/Race_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Race_Ethnicity__c</fullName>
    <label>Race Ethnicity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Race_Ethnicity</valueSetName>
    </valueSet>
</CustomField>