force-app/main/default/objects/Demographic_Served__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partner_Organization__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>